--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "graphin",
   "version": "0.0.1",
   "description": "Isomorphic GraphQl client",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "xo && ava"
+    "test": "xo && ava",
+    "build": "babel src/index.js -o dist/index.js && babel src/index.js -o dist/index.min.js --compact true --no-comments"
   },
   "keywords": [
     "graphql",
@@ -26,6 +27,11 @@
   },
   "devDependencies": {
     "ava": "^0.15.2",
+    "babel-cli": "^6.11.4",
+    "babel-plugin-transform-async-to-generator": "6.4.6",
+    "babel-plugin-transform-runtime": "6.4.3",
+    "babel-preset-es2015": "6.3.13",
+    "babel-runtime": "6.3.19",
     "xo": "^0.16.0"
   }
 }
