--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "devDependencies": {
     "ava": "^0.15.2",
     "babel-cli": "^6.11.4",
-    "babel-plugin-transform-async-to-generator": "6.4.6",
-    "babel-plugin-transform-runtime": "6.4.3",
-    "babel-preset-es2015": "6.3.13",
-    "babel-runtime": "6.3.19",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-runtime": "^6.11.6",
     "xo": "^0.16.0"
   }
 }
