--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,3 @@
 {
-  "presets": ["es2015"],
-  "plugins": [
-    "transform-runtime",
-    "syntax-async-functions",
-    "transform-async-to-generator"
-  ],
-  "env": {
-    "commonjs": {
-      "plugins": [
-        ["transform-es2015-modules-commonjs", { "loose": true }]
-      ]
-    },
-  }
+  "presets": ["es2015"]
 }
